Fixed makefiles and moved to Kbuild

--- a/src/examples/chardev/Makefile
+++ b/src/examples/chardev/Makefile
@@ -2,3 +2,5 @@ CFLAGS+=-I../../include
 
 all : t_dmx512-chardev-write t_dmx512-chardev-read
 
+clean:
+	-rm -f *.o *~ t_dmx512-chardev-write t_dmx512-chardev-read
