Added new tools to makefile.

--- a/src/examples/chardev/Makefile
+++ b/src/examples/chardev/Makefile
@@ -1,13 +1,22 @@
 CFLAGS+=-I../../include
 LDLIBS+=-lm
 
-TARGETS=t_dmx512-chardev-write \
-	t_dmx512-chardev-read \
-	t_dmx512-chardev-read-poll \
-	t_dmx512-send-test-pattern \
-	t_sinus
+TARGETS=$(OBJDIR)t_dmx512-chardev-write \
+	$(OBJDIR)t_dmx512-chardev-write-one \
+	$(OBJDIR)t_dmx512-chardev-write-multiport \
+	$(OBJDIR)t_dmx512-chardev-read \
+	$(OBJDIR)t_dmx512-chardev-read-one \
+	$(OBJDIR)t_dmx512-chardev-read-with-filter \
+	$(OBJDIR)t_dmx512-chardev-read-poll \
+	$(OBJDIR)t_dmx512-send-test-pattern \
+	$(OBJDIR)t_dmx512_recv_test_pattern \
+	$(OBJDIR)t_dmx512-chardev-select \
+	$(OBJDIR)t_dmx512-chardev-set-filter-and-loop-get-filter \
+	$(OBJDIR)t_dmx512-chardev-toomanyopen \
+	$(OBJDIR)t_dmx512-chardev-info \
+	$(OBJDIR)t_sinus
 
-all :   $(TARGETS)
+all ::   $(TARGETS)
 
 install:
 	mkdir -p $(HOME)/dmxbin/
@@ -15,3 +24,7 @@ install:
 
 clean:
 	-rm -f *.o *~ $(TARGETS)
+
+$(OBJDIR)% : $(OBJDIR)%.o
+
+$(OBJDIR)%.o : $(OBJDIR)%.c
