Add missing flags needed for cuse.

--- a/src/simulation/Makefile
+++ b/src/simulation/Makefile
@@ -15,6 +15,9 @@ CFLAGS+=-I../cuse-drivers/
 
 CFLAGS+=-g -ggdb
 
+CFLAGS+=-D_FILE_OFFSET_BITS=64
+CFLAGS+=-DFUSE_USE_VERSION=30
+
 ARCH?=x86
 OBJ=obj-$(ARCH)
 
